<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relquiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mc.ashu16012.quiz_assignfirst.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l2"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_str"
            android:id="@+id/hintbtn"
            style="?android:attr/borderlessButtonStyle" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_str"
            android:id="@+id/cheatbtn"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/l1"
        android:layout_centerInParent="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_str"
            android:id="@+id/truebtn"
            style="?android:attr/borderlessButtonStyle"
            android:drawableEnd="@drawable/thumpsup"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_str"
            android:id="@+id/falsebtn"
            style="?android:attr/borderlessButtonStyle"
            android:drawableEnd="@drawable/thumpsdown"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nxt_str"
        android:id="@+id/nxtbtn"
        android:gravity="center"
        style="?android:attr/borderlessButtonStyle"
        android:drawableEnd="@drawable/nextarrow"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/l1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_str"
        android:id="@+id/resetbtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_score_str"
        android:id="@+id/scorebtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questxt"
        android:text="@string/ques_str"
        android:minHeight="100dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@+id/l2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
